fix(popover): prevent large content to overflow the component's surface
Having large elements inside the popover surface would
result in too wide or too tall popovers. Basically the
content went beyond the `width` which was defined by
`--popover-surface-width`.

--- a/src/components/popover-surface/popover-surface.scss
+++ b/src/components/popover-surface/popover-surface.scss
@@ -15,6 +15,8 @@
 
 .limel-popover-surface {
     flex: 1;
+    min-width: 0;
+    min-height: 0;
     border-radius: var(--popover-border-radius, functions.pxToRem(12));
     box-shadow: var(--shadow-depth-16);
 
